# ca-sdk-py-release-head-drift-poc-20260601

./: A_ONLY  B_ONLY  FAIL_B  SLOW_A  pyproject.toml
.github/workflows/: auto-release.yml  test.yml
src/claude_agent_sdk/: __init__.py  _cli_version.py  proof_payload.py
